fix(demo): fix image-block demo wrap overflow

--- a/packages/site-demo/src/components/content/DemoBlock/DemoBlock.scss
+++ b/packages/site-demo/src/components/content/DemoBlock/DemoBlock.scss
@@ -11,6 +11,7 @@
     border-radius: var(--lumx-border-radius);
 
     &__content {
+        overflow: auto;
         padding: $lumx-spacing-unit * 3;
 
         #{$self}--has-play-button & {
